# Beaver

./: .gitignore  plugin_build.bat
Assets/: AATestSceneLightingSettings.lighting
Assets/Editor/: PostProcessingEffectParameterDrawer.cs
Assets/Materials/: Black.mat  Blue.mat  FlatColored.mat  Floor.mat  Green.mat  Red.mat
Assets/Plugins/Android/: launcherTemplate.gradle  launcherTemplate.gradle.backup  mainTemplate.gradle  mainTemplate.gradle.backup
Assets/Plugins/x86_64/: gpu_timer.exp  gpu_timer.lib
Assets/RenderTextures/: StreamTestRenderTexture.renderTexture  TestRenderTexture.renderTexture
Assets/Scenes/: AntiAliasingImplementationTest.unity  EffectFrametimeTest.unity  FFMpegTestScene.unity  MainScene.unity  TestScene.unity
Assets/Scenes/AntiAliasingImplementationTest/: LightingData.asset  Lightmap-1_comp_light.exr
Assets/Scenes/FFMpegTestScene/: NavMesh-World.asset
Assets/Scripts/: FFMpegInit.cs  FFMpegKitInterop.cs  FFMpegSessionCallbackJavaProxy.cs  PostProcessingEffect.cs  PostProcessingEffectScheduler.cs  PostProcessingEffectSource.cs  RenderMultipleTexturesToScreen.cs  RenderToVrScreen.cs  SessionManager.cs  TestPostProcessingEffectApplyer.cs  VideoStreamClient.cs
Assets/Scripts/FFMpeg/: FFMpegInit.cs  FFMpegStreamReceiver.cs  IFFMpegService.cs  PlatformFFMpegService.cs  (+1 more)
Assets/Shaders/: BlitEyePortion.shader  SplitFlatIntoTwo.shader
Assets/XR/: XRGeneralSettings.asset
NativePlugin/: .gitignore  CMakeLists.txt  gpu_timer.cpp
ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset
(+32 files in other folders)
